--- a/.github/workflows/upgrade-1-fetch-latest.yml
+++ b/.github/workflows/upgrade-1-fetch-latest.yml
@@ -36,4 +36,6 @@ jobs:
           git fetch
           git checkout ${{ github.event.inputs.previous-version }}
           git switch ${{ github.event.inputs.upgrade-version }}
+          git log --oneline --grep='^HUK-' ${{ github.event.inputs.previous-version }}
+          git log --oneline --grep='^HUK-' ${{ github.event.inputs.previous-version }} | awk '{print $1}'
           git log --oneline --grep='^HUK-' ${{ github.event.inputs.previous-version }} | awk '{print $1}' | xargs -n 1 git cherry-pick
