--- a/.github/workflows/upgrade-2-cherry-pick-into-upgrade-repo.yml
+++ b/.github/workflows/upgrade-2-cherry-pick-into-upgrade-repo.yml
@@ -28,7 +28,7 @@ jobs:
           git fetch
           git checkout ${{ github.event.inputs.previous-version }}
           git switch ${{ github.event.inputs.upgrade-version }}
-          git log --oneline --grep='^HUK-' ${{ github.event.inputs.previous-version }} | awk '{print $1}' | xargs -n 1 git cherry-pick
+          git log --oneline --grep="^HUK-" ${{ github.event.inputs.previous-version }} | awk '{print $1}' | xargs -n 1 git cherry-pick
           git push -u origin ${{ github.event.inputs.upgrade-version }}
 
 
