--- a/.github/workflows/upgrade-3-build-working-directory.yml
+++ b/.github/workflows/upgrade-3-build-working-directory.yml
@@ -58,26 +58,32 @@ jobs:
           cd civicrm-packages
           git remote add upstream https://github.com/civicrm/civicrm-packages.git
           git fetch upstream
+          git checkout {{ github.event.inputs.upgrade-version }}
           git push origin
           cd ../civicrm-wordpress
           git remote add upstream https://github.com/civicrm/civicrm-wordpress.git
           git fetch upstream
+          git checkout {{ github.event.inputs.upgrade-version }}
           git push origin
           cd ../civicrm-drupal
           git remote add upstream https://github.com/civicrm/civicrm-drupal.git
           git fetch upstream
+          git checkout 7.x.{{ github.event.inputs.upgrade-version }}
           git push origin
           cd ../civicrm-drupal-8
           git remote add upstream https://github.com/civicrm/civicrm-drupal-8.git
           git fetch upstream
+          git checkout {{ github.event.inputs.upgrade-version }}
           git push origin
           cd ../civicrm-joomla
           git remote add upstream https://github.com/civicrm/civicrm-joomla.git
           git fetch upstream
+          git checkout {{ github.event.inputs.upgrade-version }}
           git push origin
           cd ../civicrm-backdrop
           git remote add upstream https://github.com/civicrm/civicrm-backdrop.git
           git fetch upstream
+          git checkout 1.x.{{ github.event.inputs.upgrade-version }}
           git push origin
 
       - name: Clone our buildkit repo
@@ -93,6 +99,12 @@ jobs:
         run: |
           cd civicrm-buildkit-docker
           docker compose exec -iu buildkit civicrm bash -c "cd /buildkit/build/dist/src && git remote add humanistsuk https://github.com/bhahumanists/civicrm-core"
+          docker compose exec -iu buildkit civicrm bash -c "cd /buildkit/build/dist/src/packages && git remote add humanistsuk https://github.com/bhahumanists/civicrm-packages"
+          docker compose exec -iu buildkit civicrm bash -c "cd /buildkit/build/dist/src/WordPress && git remote add humanistsuk https://github.com/bhahumanists/civicrm-wordpress"
+          docker compose exec -iu buildkit civicrm bash -c "cd /buildkit/build/dist/src/drupal && git remote add humanistsuk https://github.com/bhahumanists/civicrm-drupal"
+          docker compose exec -iu buildkit civicrm bash -c "cd /buildkit/build/dist/src/drupal-8 && git remote add humanistsuk https://github.com/bhahumanists/civicrm-drupal-8"
+          docker compose exec -iu buildkit civicrm bash -c "cd /buildkit/build/dist/src/joomla && git remote add humanistsuk https://github.com/bhahumanists/civicrm-joomla"
+          docker compose exec -iu buildkit civicrm bash -c "cd /buildkit/build/dist/src/backdrop && git remote add humanistsuk https://github.com/bhahumanists/civicrm-backdrop"
           
       - name: Pull our custom repos
         run: cd civicrm-buildkit-docker && docker compose exec -iu buildkit civicrm bash -c "cd /buildkit/build/dist && env GIT_REMOTE=humanistsuk cividist update"
